--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ p{
 }
 
 .firstbox{
-  background-color: #c9dbf0;
+  /*  background-color: #c9dbf0; */
   /*  background-color: #f6f6f6; */
   border: solid 1px; 
 }
