--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ p{
 }
 
 .secondbox{
-  background-color: #ead1db;
+  /* background-color: #ead1db; */
   /* background-color: #f6f6f6; */
   border: solid 1px; 
 }
